# databricks_cicd_template

./: .env.example  .gitignore  README.md  README.md.bak  databricks.yml  pyproject.toml  test_feature.sh
.github/workflows/: deploy-nasa-turbofan.yml  deploy-nyc-taxi.yml  deploy.yml  trigger-deployment.yml
projects/nasa_turbofan/: databricks.yml
projects/nasa_turbofan/resources/: clusters.yml  jobs.yml  pipelines.yml
projects/nasa_turbofan/variables/: dev.yml  prod.yml
projects/nyc_taxi/: databricks.yml
projects/nyc_taxi/resources/: clusters.yml  jobs.yml  pipelines.yml
projects/nyc_taxi/src/dlt/: dlt_pipeline.py
projects/nyc_taxi/src/dlt/helpers/: gold_transforms.py
projects/nyc_taxi/src/jobs/: bronze_ingestion.py
resources/dashboards/: executive_kpi.json
shared/resources/: monitoring.yml
shared/scripts/: sync_project_code.py
src/: hello_databricks.py
src/dashboards/: dashboard_builder.py  deploy_dashboards.py  executive_kpi_dashboard.py
src/dlt/: nyc_taxi_dlt_bronze.py  nyc_taxi_dlt_gold.py  nyc_taxi_dlt_silver.py
src/dlt/helpers/: bronze_transforms.py  silver_transforms.py
src/jobs/: bronze_ingestion.py
